tests/snapshots/integration__integration_tests__configure_shell__configure_shell_fish_custom_prefix.snap
---
source: tests/integration_tests/configure_shell.rs
info:
  program: wt
  args:
    - configure-shell
    - "--shell"
    - fish
    - "--cmd"
    - worktree
    - "--yes"
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmp0BNQxd
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: true
exit_code: 0
----- stdout -----
Created [1mfish[0m [TEMP_HOME]/.config/fish/conf.d/worktree.fish
  [2mif type -q worktree; worktree init fish | source; end[0m

✅ [32mConfigured 1 shell[0m

💡 [2mRestart your shell or run: source <config-file>[0m

----- stderr -----
